# small_twitter_clone

./: README.md  alembic.ini  pyproject.toml
src/database/: database.py  utils.py
src/models/: base.py  tweets.py  users.py
src/routes/: media.py
src/schemas/: media_schema.py
src/utils/: auth.py  file_utils.py  settings.py
