[project]
name = "monetie"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "alembic>=1.16.4",
    "asyncpg>=0.30.0",
    "fastapi>=0.116.1",
    "loguru==0.7.2",
    "pydantic-settings==2.0.3",
    "sqlalchemy[asyncio]>=2.0.42",
]
